<resources>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">프로필</string>
    <string name="menu_statistics">통계</string>
    <string name="menu_board">게시판</string>
    <string name="menu_motivation">동기부여</string>
    <string name="menu_contact">문의하기</string>
    <string name="menu_star">평점주기</string>

    <string name="menu_help">도움말</string>
    <string name="menu_opensource">오픈소스라이센스</string>
    <string name="menu_setting">설정</string>
    <string name="menu_logout">로그아웃</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="app_name">HealthSchedule</string>
    <string name="item_nature_title">Nature %d</string>
    <string name="BackPress">종료하려면 한번 더 누르세요.</string>

    <!--Error Message-->
    <string name="NotFound">실패하였습니다.</string>
    <!--툴바 Title-->
    <string name="Title_Main">한 주의 운동 계획</string>
    <string name="Title_Registration">운동 등록/수정</string>
    <string name="Title_Calendar">운동달력</string>

    <!--운동 등록-->
    <string name="SelectWorkoutName">클릭하여 운동을 선택해주세요.</string>
    <string name="InputTheWorkoutName">운동명을 입력해주세요</string>
    <string name="EmptyRegistration">등록된 운동이 없습니다.</string>

</resources>
